--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3030420211227002",
     "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3030420211227002",
     "autoprefixer": "^10.4.0",
+    "sass": "^1.49.9",
     "typescript": "^4.5.2",
     "vite": "^2.7.7"
   }
