--- a/package.json
+++ b/package.json
@@ -1,61 +1,81 @@
 {
-  "name": "uni-preset-vue",
-  "version": "0.0.0",
-  "scripts": {
-    "dev:app": "uni -p app",
-    "dev:custom": "uni -p",
-    "dev:h5": "uni",
-    "dev:h5:ssr": "uni --ssr",
-    "dev:mp-alipay": "uni -p mp-alipay",
-    "dev:mp-baidu": "uni -p mp-baidu",
-    "dev:mp-kuaishou": "uni -p mp-kuaishou",
-    "dev:mp-lark": "uni -p mp-lark",
-    "dev:mp-qq": "uni -p mp-qq",
-    "dev:mp-toutiao": "uni -p mp-toutiao",
-    "dev:mp-weixin": "uni -p mp-weixin",
-    "dev:quickapp-webview": "uni -p quickapp-webview",
-    "dev:quickapp-webview-huawei": "uni -p quickapp-webview-huawei",
-    "dev:quickapp-webview-union": "uni -p quickapp-webview-union",
-    "build:app": "uni build -p app",
-    "build:custom": "uni build -p",
-    "build:h5": "uni build",
-    "build:h5:ssr": "uni build --ssr",
-    "build:mp-alipay": "uni build -p mp-alipay",
-    "build:mp-baidu": "uni build -p mp-baidu",
-    "build:mp-kuaishou": "uni build -p mp-kuaishou",
-    "build:mp-lark": "uni build -p mp-lark",
-    "build:mp-qq": "uni build -p mp-qq",
-    "build:mp-toutiao": "uni build -p mp-toutiao",
-    "build:mp-weixin": "uni build -p mp-weixin",
-    "build:quickapp-webview": "uni build -p quickapp-webview",
-    "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
-    "build:quickapp-webview-union": "uni build -p quickapp-webview-union"
-  },
-  "dependencies": {
-    "@dcloudio/uni-app": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-app-plus": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-components": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-h5": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-mp-alipay": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-mp-baidu": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-mp-kuaishou": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-mp-lark": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-mp-qq": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3030420211227002",
-    "vue": "^3.2.26",
-    "vue-i18n": "^9.1.9",
-    "vuex": "^4.0.2"
-  },
-  "devDependencies": {
-    "@dcloudio/types": "^2.5.15",
-    "@dcloudio/uni-automator": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3030420211227002",
-    "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3030420211227002",
-    "autoprefixer": "^10.4.0",
-    "sass": "^1.49.9",
-    "typescript": "^4.5.2",
-    "vite": "^2.7.7"
-  }
+    "name": "uni-preset-vue",
+    "version": "0.0.0",
+    "scripts": {
+        "dev:app": "uni -p app",
+        "dev:custom": "uni -p",
+        "dev:h5": "uni",
+        "dev:h5:ssr": "uni --ssr",
+        "dev:mp-alipay": "uni -p mp-alipay",
+        "dev:mp-baidu": "uni -p mp-baidu",
+        "dev:mp-kuaishou": "uni -p mp-kuaishou",
+        "dev:mp-lark": "uni -p mp-lark",
+        "dev:mp-qq": "uni -p mp-qq",
+        "dev:mp-toutiao": "uni -p mp-toutiao",
+        "dev:mp-weixin": "uni -p mp-weixin",
+        "dev:quickapp-webview": "uni -p quickapp-webview",
+        "dev:quickapp-webview-huawei": "uni -p quickapp-webview-huawei",
+        "dev:quickapp-webview-union": "uni -p quickapp-webview-union",
+        "build:app": "uni build -p app",
+        "build:custom": "uni build -p",
+        "build:h5": "uni build",
+        "build:h5:ssr": "uni build --ssr",
+        "build:mp-alipay": "uni build -p mp-alipay",
+        "build:mp-baidu": "uni build -p mp-baidu",
+        "build:mp-kuaishou": "uni build -p mp-kuaishou",
+        "build:mp-lark": "uni build -p mp-lark",
+        "build:mp-qq": "uni build -p mp-qq",
+        "build:mp-toutiao": "uni build -p mp-toutiao",
+        "build:mp-weixin": "uni build -p mp-weixin",
+        "build:quickapp-webview": "uni build -p quickapp-webview",
+        "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
+        "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+        "lint:js": "eslint --fix --ext .js,.jsx,.ts,.tsx,.vue src",
+        "lint:css": "stylelint src/**/*.{html,vue,css,scss}",
+        "lint": "prettier --write src/**/*.{vue,css,scss,json,js,ts,jsx,tsx} && npm run lint:js && npm run lint:css"
+    },
+    "dependencies": {
+        "@dcloudio/uni-app": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-app-plus": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-components": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-h5": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-mp-alipay": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-mp-baidu": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-mp-kuaishou": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-mp-lark": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-mp-qq": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3030420211227002",
+        "vue": "^3.2.26",
+        "vue-i18n": "^9.1.9",
+        "vuex": "^4.0.2"
+    },
+    "devDependencies": {
+        "@dcloudio/types": "^2.5.15",
+        "@dcloudio/uni-automator": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3030420211227002",
+        "@typescript-eslint/eslint-plugin": "^5.12.1",
+        "@typescript-eslint/parser": "^5.12.1",
+        "autoprefixer": "^10.4.0",
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.4.0",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-vue": "^8.5.0",
+        "prettier": "^2.5.1",
+        "sass": "^1.49.9",
+        "stylelint": "^14.5.3",
+        "stylelint-config-prettier": "^9.0.3",
+        "stylelint-config-rational-order": "^0.1.2",
+        "stylelint-config-recommended-scss": "^5.0.2",
+        "stylelint-config-recommended-vue": "^1.3.0",
+        "stylelint-config-standard-scss": "^3.0.0",
+        "stylelint-order": "^5.0.0",
+        "typescript": "^4.5.2",
+        "vite": "^2.7.7"
+    }
 }
