--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3030420211227002",
         "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3030420211227002",
         "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3030420211227002",
+        "mockjs": "^1.1.0",
         "vue": "^3.2.26",
         "vue-i18n": "^9.1.9",
         "vuex": "^4.0.2"
@@ -56,6 +57,7 @@
         "@dcloudio/uni-automator": "^3.0.0-alpha-3030420211227002",
         "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3030420211227002",
         "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3030420211227002",
+        "@types/mockjs": "^1.0.6",
         "@typescript-eslint/eslint-plugin": "^5.12.1",
         "@typescript-eslint/parser": "^5.12.1",
         "autoprefixer": "^10.4.0",
