--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@dcloudio/uni-mp-toutiao": "^3.0.0-alpha-3030420211227002",
         "@dcloudio/uni-mp-weixin": "^3.0.0-alpha-3030420211227002",
         "@dcloudio/uni-quickapp-webview": "^3.0.0-alpha-3030420211227002",
+        "@dcloudio/uni-ui": "^1.4.12",
         "mockjs": "^1.1.0",
         "vue": "^3.2.26",
         "vue-i18n": "^9.1.9",
