--- a/src/manifest.json
+++ b/src/manifest.json
@@ -50,7 +50,7 @@
     "quickapp": {},
     /* 小程序特有相关 */
     "mp-weixin": {
-        "appid": "",
+        "appid": "wx435a39e391de2067",
         "setting": {
             "urlCheck": false
         },
