--- a/package.json
+++ b/package.json
@@ -35,19 +35,20 @@
         "lint": "prettier --write src/**/*.{vue,css,scss,json,js,ts,jsx,tsx} && npm run lint:js && npm run lint:css"
     },
     "dependencies": {
-        "@dcloudio/uni-app": "3.0.0-3081220230817001",
-        "@dcloudio/uni-app-plus": "3.0.0-3081220230817001",
-        "@dcloudio/uni-components": "3.0.0-3081220230817001",
-        "@dcloudio/uni-h5": "3.0.0-3081220230817001",
-        "@dcloudio/uni-mp-alipay": "3.0.0-3081220230817001",
-        "@dcloudio/uni-mp-baidu": "3.0.0-3081220230817001",
-        "@dcloudio/uni-mp-jd": "3.0.0-3081220230817001",
-        "@dcloudio/uni-mp-kuaishou": "3.0.0-3081220230817001",
-        "@dcloudio/uni-mp-lark": "3.0.0-3081220230817001",
-        "@dcloudio/uni-mp-qq": "3.0.0-3081220230817001",
-        "@dcloudio/uni-mp-toutiao": "3.0.0-3081220230817001",
-        "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
-        "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
+        "@dcloudio/uni-app": "3.0.0-3090820231124001",
+        "@dcloudio/uni-app-plus": "3.0.0-3090820231124001",
+        "@dcloudio/uni-components": "3.0.0-3090820231124001",
+        "@dcloudio/uni-h5": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-alipay": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-baidu": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-jd": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-kuaishou": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-lark": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-qq": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-toutiao": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-weixin": "3.0.0-3090820231124001",
+        "@dcloudio/uni-mp-xhs": "3.0.0-3090820231124001",
+        "@dcloudio/uni-quickapp-webview": "3.0.0-3090820231124001",
         "@dcloudio/uni-ui": "^1.4.12",
         "mockjs": "^1.1.0",
         "vue": "^3.3.4",
@@ -56,13 +57,14 @@
     },
     "devDependencies": {
         "@dcloudio/types": "^3.3.3",
-        "@dcloudio/uni-automator": "3.0.0-3081220230817001",
-        "@dcloudio/uni-cli-shared": "3.0.0-3081220230817001",
-        "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
-        "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
+        "@dcloudio/uni-automator": "3.0.0-3090820231124001",
+        "@dcloudio/uni-cli-shared": "3.0.0-3090820231124001",
+        "@dcloudio/uni-stacktracey": "3.0.0-3090820231124001",
+        "@dcloudio/vite-plugin-uni": "3.0.0-3090820231124001",
         "@types/mockjs": "^1.0.6",
         "@typescript-eslint/eslint-plugin": "^5.12.1",
         "@typescript-eslint/parser": "^5.12.1",
+        "@vue/runtime-core": "^3.2.45",
         "autoprefixer": "^10.4.0",
         "eslint": "^8.2.0",
         "eslint-config-airbnb-base": "^15.0.0",
@@ -81,6 +83,6 @@
         "stylelint-config-standard-scss": "^3.0.0",
         "stylelint-order": "^5.0.0",
         "typescript": "^4.5.2",
-        "vite": "^4.1.4"
+        "vite": "^4.0.3"
     }
 }
